#27 definition of input document